# Spectra-Simulator-C

./: .gitignore  CMakeLists.txt  README.md  a.ipynb  run_code.py  run_code_rg_hdnu.py  setup.sh
Configurations/: main.cfg
training_code/: Documentation.md  a.ipynb  a.py  all_params.txt  config.json  generate_synthetic_data.py  requirements.txt  tmp.txt  tmp_train.py  train.py
